--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -35,7 +35,7 @@
  </p>  
   <p class="Comprar">Comprar</p></div>
 <div class="glasses">
-    <img src="Images/Glasses.png" alt="">
+    <img src="Images/Glasses.png" class="hello" alt="">
 </div></section>
     
    <div class="Big" >
